# nyc-build-with-ai

./: .env.example  .gitignore  BUILD-PLAN-TODAY.md  DEMO-PRACTICE.md  GEMINI-CHEATSHEET.md  MY-PROJECT-IDEA.md  QUICK-START.md  README.md  STATUS.md  check-setup.py  config.json  requirements.txt
bedtime-stories/: .gitignore  README.md  app.py  requirements.txt
bedtime-stories/agents/: __init__.py  storyteller.py  vision.py
bedtime-stories/docs/: ARCHITECTURE.md  GITHUB.md  SETUP.md
codelabs/level-0/: IMAGE-GENERATION-NOTE.md  README.md  identity_generator.py  image_generator.py
codelabs/level-1/: MULTI-AGENT-GUIDE.md  README.md  hackathon_agents.py  multi_agent.py
codelabs/level-3/: HACKATHON-IDEAS.md  HACKATHON-TRACKS.md  README.md  creative_storyteller.py  live_multimodal_agent.py
examples/hello-gemini/: README.md  agent.py
examples/vision-agent/: README.md  vision_agent.py
examples/voice-agent/: README.md  voice_agent.py
hackathon-project/: PROJECT-PLAN.md  README.md  setup_project.py
level_0/: generator.py
milestone_moments/: DEMO-TECHNICAL-GUIDE.md  PROJECT-PIVOT.md  PROJECT-STATUS.md  README.md  TECHNICAL-OVERVIEW.md  bedtime_app.py  bedtime_storyteller.py  milestone_app.py  storyteller_agent.py  vision_agent.py
stagesense/: .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md
way-back-home/: .gcloudignore  AGENTS.md  DEVLOG.md  PLAN.md
way-back-home/level_5/: pyproject.toml
way-back-home/level_5/agent/: agent_to_kafka_a2a.py
way-back-home/level_5/agent/formation/: agent.py
way-back-home/level_5/satellite/: main.py
(+51 files in other folders)
